// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly when is checked 1`] = `
Array [
  ".sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #f4ab34;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #f4ab34;
    opacity: 0.16;
  }
  .ripple-d1-0-2-12 {
    background-color: #f4ab34;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #777777;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #bbbbbb;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
    border: 2px solid #f4ab34;
    background-color: #f4ab34;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #bbbbbb;
    background-color: #bbbbbb;
  }
  .checkbox-d0-0-2-4 {  }
  .checkbox-d0-0-2-4:checked {  }
  .checkbox-d0-0-2-4:checked:after {
    content: \\"\\";
  }",
  <div>
    <div
      class="container-0-2-1"
    >
      <div
        class="wrapper-0-2-6 wrapper-d0-0-2-11"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
        >
          <div
            class="ripple-0-2-7 ripple-d1-0-2-12 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            checked=""
            class="checkbox-0-2-3 checkbox-d0-0-2-4"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly when is disabled 1`] = `
Array [
  ".sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #777777;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #bbbbbb;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
    border: 2px solid #f4ab34;
    background-color: #f4ab34;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #bbbbbb;
    background-color: #bbbbbb;
  }
  .checkbox-d0-0-2-4 {  }
  .checkbox-d0-0-2-4:checked {  }
  .checkbox-d0-0-2-4:checked:after {
    content: \\"\\";
  }",
  <div>
    <div
      class="container-0-2-1"
    >
      <div
        class="wrapper-0-2-6 wrapper-d0-0-2-11"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
        >
          <div
            class="ripple-0-2-7 ripple-d1-0-2-12 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-4"
            data-testid="ds-checkbox-any"
            disabled=""
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly when is indeterminate 1`] = `
Array [
  ".sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0.16;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #777777;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #bbbbbb;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
    border: 2px solid #f4ab34;
    background-color: #f4ab34;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #bbbbbb;
    background-color: #bbbbbb;
  }
  .checkbox-d0-0-2-4 {  }
  .checkbox-d0-0-2-4:checked {  }
  .checkbox-d0-0-2-4:checked:after {
    content: \\"\\";
  }",
  <div>
    <div
      class="container-0-2-1"
    >
      <div
        class="wrapper-0-2-6 wrapper-d0-0-2-11"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
        >
          <div
            class="ripple-0-2-7 ripple-d1-0-2-12 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-4"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly with default props 1`] = `
Array [
  ".sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0.16;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #777777;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #bbbbbb;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
    border: 2px solid #f4ab34;
    background-color: #f4ab34;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #bbbbbb;
    background-color: #bbbbbb;
  }
  .checkbox-d0-0-2-4 {  }
  .checkbox-d0-0-2-4:checked {  }
  .checkbox-d0-0-2-4:checked:after {
    content: \\"\\";
  }",
  <div>
    <div
      class="container-0-2-1"
    >
      <div
        class="wrapper-0-2-6 wrapper-d0-0-2-11"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
        >
          <div
            class="ripple-0-2-7 ripple-d1-0-2-12 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-4"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Checkbox component should render correctly with label 1`] = `
Array [
  ".sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0.16;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 500ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 500ms;
  }
  .container-0-2-1 {
    display: flex;
    align-items: center;
  }
  .wrapper-0-2-2 {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .checkbox-0-2-3 {
    width: 18px;
    border: 2px solid #777777;
    cursor: pointer;
    height: 18px;
    margin: 0;
    display: inline-block;
    position: relative;
    appearance: none;
    border-radius: 2px;
  }
  .checkbox-0-2-3:focus {
    outline: none;
  }
  .checkbox-0-2-3:disabled {
    border: 2px solid #bbbbbb;
    cursor: default;
  }
  .checkbox-0-2-3:checked {
    color: #ffffff;
    border: 2px solid #f4ab34;
    background-color: #f4ab34;
  }
  .checkbox-0-2-3:checked:after {
    top: 50%;
    left: 50%;
    display: block;
    position: absolute;
    font-size: 18px;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: natds-icons;
  }
  .checkbox-0-2-3:checked:disabled {
    border: 2px solid #bbbbbb;
    background-color: #bbbbbb;
  }
  .checkbox-d0-0-2-4 {  }
  .checkbox-d0-0-2-4:checked {  }
  .checkbox-d0-0-2-4:checked:after {
    content: \\"\\";
  }
  .label-0-2-15 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-16 {
    font-size: 14px;
    color: #333333;
  }",
  <div>
    <div
      class="container-0-2-1"
    >
      <div
        class="wrapper-0-2-6 wrapper-d0-0-2-11"
        data-testid="ripple-wrapper"
        tabindex="0"
      >
        <div
          class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
        >
          <div
            class="ripple-0-2-7 ripple-d1-0-2-12 "
            data-testid="ripple-animation"
          />
        </div>
        <div
          class="wrapper-0-2-2"
        >
          <input
            class="checkbox-0-2-3 checkbox-d0-0-2-4"
            data-testid="ds-checkbox-any"
            id="any"
            type="checkbox"
            value="any value"
          />
        </div>
      </div>
      <label
        class="label-0-2-15 label-d0-0-2-16"
      >
        something
      </label>
    </div>
  </div>,
]
`;
